<resources>
    <string name="app_name">misdatos</string>
    <string name="boton1">MIS DATOS</string>
    <string name="boton3">MIS DATOS2</string>
    <string name="campo1">Nombre de la persona</string>
    <string name="campo2">email nuevo</string>
    <string name="campo3">telefono</string>
    <string name="campo4">fecha</string>
    <string name="campo5">REPORTE DE HECHOS</string>
    <string name="campo6">localizacion</string>
    <string name="campo7">USUARIO</string>
    <string name="campo8">CONTRASEÑA</string>
    <string name="boton2">GUARDAR</string>

    <string name="campohome">cuadro de texto home</string>
    <string name="botonhome1">botonhome1</string>
    <string name="botonhome2">botonhome2</string>
    <string name="llamauno">pide uno</string>
    <string name="llamatodos">pide todos</string>
    <string name="inicio">INICIAR SESION</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

</resources>
