<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textohome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/campohome" />

        <Button
            android:id="@+id/bhome1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botonhome1" />

        <Button
            android:id="@+id/bhome2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botonhome2" />

        <TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text=""
            android:textAlignment="center"
            android:textSize="0sp" />

        <Button
            android:id="@+id/llamadauno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/llamauno" />

        <Button
            android:id="@+id/llamadatodos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/llamatodos" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>