<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReporteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/campo1" />

        <EditText
            android:id="@+id/rptnombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/campo1"
            android:autofillHints=""
            tools:targetApi="o"

            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/campo2" />

        <EditText
            android:id="@+id/rptcorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/campo2"
            android:autofillHints=""
            tools:targetApi="o"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/campo3" />

        <EditText
            android:id="@+id/rpttelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/campo3"
            android:autofillHints=""
            tools:targetApi="o"
            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/campo4" />

        <EditText
            android:id="@+id/rptfecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/campo4"
            android:autofillHints=""
            tools:targetApi="o"
            />

        <MultiAutoCompleteTextView
            android:id="@+id/rpthechos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo5"
            android:autofillHints=""
            tools:targetApi="o"/>

        <TextView
            android:id="@+id/geolocalizacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/campo6" />

        <EditText
            android:id="@+id/rptgeo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/campo6"
            android:autofillHints=""
            tools:targetApi="o"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton2" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>