<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/campo7"
            android:autofillHints=""
            tools:targetApi="o"

            />

        <EditText
            android:id="@+id/nclave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/campo8"
            tools:targetApi="o" />

        <Button
            android:id="@+id/iniciarsesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inicio" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>